Initialized TS project w/ Bun

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Front-end Development is the Worst</h1>
+    <link rel="stylesheet" href="/styles.css" />
     <p>
       Look, front-end development is for script kiddies and soydevs who can't
       handle the real programming. I mean, it's just a bunch of divs and spans,
